--- a/index.html
+++ b/index.html
@@ -12,57 +12,32 @@
 </head>
 <body>
   <header class="bg-dark-subtle text-black p-3 mb-3">
-    <h1 class="d-flex justify-content-center fs-1">5 day weather forcast</h1>
+    <h1 class="d-flex justify-content-center">5 day weather forcast</h1>
     <div class="row d-flex justify-content-center text-dark fs-2" id="current-date"></div>
     <div class="row d-flex justify-content-center text-dark fs-3 " id="current-time"></div>
     <div id="search-bar" class="d-flex justify-content-end">
-      <input id="city-search" type="text" class="me-2 rounded-2 p-2" placeholder="Search City or Zip Code"><button id="search" class="bg-dark text-white me-2 rounded-2">search</button>
+      <input id="city-search" type="text" class="me-2 rounded-2 p-2" placeholder="Search City or Zip Code"><button class="btn searchBtn bg-dark text-white me-2 rounded-2" onclick="handleSearch()" id="search">search</button>
       </div>
 </header>
- 
-  <div id="container" class="row m-3">
-    <div class="card m-4 p-4 bg-dark-subtle" style="width: 18rem;">
-      <h2 id="day-one" class="text-dark"></h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item bg-black text-bg-primary">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
+
+
+<!-- <div class="card2" id="card-template2" style=" display: none; width: 18rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item" id="dateTemplate2">A third item</li>
+    <li class="list-group-item" id="humidTemplate2">An item</li>
+    <li class="list-group-item" id="tempTemplate2">A second item</li>
+    <li class="list-group-item" id="windTemplate2">A third item</li>
+    
+  </ul>
+</div> -->
+  <div id="container">
+    <div id="resultsDiv">
+   
     </div>
-    <div class="card m-4 p-4" style="width: 18rem;">
-      <h2 id="day-two" class="text-dark"></h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-    </div>
-    <div class="card m-4 p-4" style="width: 18rem;">
-      <h2 id="day-three" class="text-dark"></h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-    </div>
-    <div class="card m-4 p-4" style="width: 18rem;">
-      <h2 id="day-four" class="text-dark"></h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-    </div>
-    <div class="card m-4 p-4" style="width: 18rem;">
-      <h2 id="day-five" class="text-dark"></h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-    </div>
+   
   </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
+ 
 </body>
 </html>
